tests/ui/invalid_pymodule_two_pymodule_init.stderr
error: only one `#[pymodule_init]` may be specified
  --> tests/ui/invalid_pymodule_two_pymodule_init.rs:13:5
   |
13 |     fn init2(_m: &Bound<'_, PyModule>) -> PyResult<()> {
   |     ^^
